@@ -8,7 +8,7 @@ plugins {
     id 'jacoco'
     id 'maven-publish'
     id 'com.jfrog.bintray' version '1.8.4'
-    id "au.com.dius.pact" version "4.1.7"
+    id "au.com.dius.pact" version "4.0.0"
 }
 
 def versions = [
@@ -16,6 +16,17 @@ def versions = [
         javaVersion: '11',
         jacocoVersion: '0.8.5'
 ]
+
+
+dependencies{
+    testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
 
 
 allprojects {
@@ -48,6 +59,7 @@ allprojects {
         }
     }
 }
+
 
 tasks.register("codeCoverageReport", JacocoReport) {
     // If a subproject applies the 'jacoco' plugin, add the result it to the report
@@ -224,7 +236,7 @@ subprojects {
                 protocol = 'http'
                 host = 'fees-register-api-aat.service.core-compute-aat.internal'
                 port = 80
-                if (pactBrokerUrl) hasPactsFromPactBroker(pactBrokerUrl)
+                if (pactBrokerUrl) hasPactsFromPactBrokerWithTag(pactBrokerUrl, 'master')
                 publish {
                     if (pactBrokerUrl) pactBrokerUrl = pactBrokerUrl
                     pactBrokerUrl = System.getProperty("PACT_BROKER_URL") ?: 'http://localhost:80'
